# rag-summarisation-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  report.md  requirements.txt
notebooks/: imj_explore.ipynb
src/: evaluation.py  main.py
