[project]
name = "rag-summarisation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
    "wikipedia>=1.4.0",
]
